Create grid of squares

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 <head>
   <title>Etch-A-Sketch</title>
   <script src="app.js" defer></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container"></div>
+  <div id="container"></div>
 </body>
 </html>
