--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="button"><button type="button">Clear</button></div>
   <div id="container"></div>
 </body>
 </html>
