Add buttons for random colors and your own color

--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="button"><button type="button">Clear</button></div>
+  <div class="button">
+    <button type="button" id="clearButton">Clear</button>
+    <button type="button" id="resizeButton">Resize</button>
+    <button type="button" id="randomColorButton">Random colors</button>
+    <button type="button" id="chooseColorButton">Choose your color</button>
+  </div>
   <div id="container"></div>
 </body>
 </html>
