--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <title>Etch-A-Sketch</title>
   <script src="app.js" defer></script>
+  <link href="https://fonts.googleapis.com/css?family=Satisfy&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <h1>Etch-A-Sketch</h1>
   <div class="button">
     <button type="button" id="clearButton">Clear</button>
     <button type="button" id="resizeButton">Resize</button>
